[package]
name = "crushtool"
description = "A library to encode and decode Ceph's crushmap"
version = "0.3.10"
authors = ["Chris Holcombe <xfactor973@gmail.com>"]
repository = "https://github.com/cholcombe973/crushtool"
license = "MIT"
documentation = "https://docs.rs/crushtool"

[lib]
name = "crushtool"
path = "src/lib.rs"
doc = true

[[bin]]
name = "crushtool-bin"
path = "src/main.rs"
doc = false

[dependencies]
byteorder = "~1.0"
enum_primitive = "~0.1"
log = "~0.3"
clap = "~2.14"
nom = "^2.0"
num = "~0.1"
rustc-serialize = "~0.3"
uuid = { version = "0.4", features = ["rustc-serialize"] }
